# access_management

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
access_management/: hooks.py  modules.txt
access_management/access_management/doctype/access/: access.js  access.json  access.py  access_list.js  test_access.py
access_management/access_management/doctype/resource/: resource.js  resource.json  resource.py  resource_list.js  test_resource.py
access_management/access_management/workspace/access_management/: access_management.json
access_management/config/: desktop.py  docs.py
